fix: Our Events section now displays correctly on mobile and row css has been moved from tailwind to css page

--- a/src/app/(site)/css/homepageLayout.css
+++ b/src/app/(site)/css/homepageLayout.css
@@ -51,7 +51,6 @@
     width: 100vw;
     height: fit-content;
     min-height: 100vh;
-
     padding-bottom: 2%;
 }
 
@@ -66,8 +65,6 @@
     padding-bottom: 2%;
     margin-top: 3%;
 }
-
-
 
 .LogoContainer {
     display: flex;
@@ -157,7 +154,8 @@
 .OurEvents {
     background-color: #aba08f;
     width: 100vw;
-    height: 100vh;
+    height: fit-content;
+    min-height: 100vh;
 }
 
 .OurEventsHeading {
@@ -167,6 +165,11 @@
     color: #FFFCF7;
     padding-top: 4%;
     padding-left: 5%;
+}
+
+.OurEventsContent{
+    display: flex;
+    flex-direction: row;
 }
 
 .EventImageContainer {
@@ -221,6 +224,7 @@
     padding-left: 1rem/* 16px */;
     padding-right: 1rem/* 16px */;
     border-radius: 9999px;
+    margin-left: 5%;
 }
 
 .hover\:Button:hover {
@@ -306,5 +310,51 @@
     .hrDiamond, .hrPlatinum, .hrGold {
         width: 100vw;
         margin-top: 5%; 
+    }
+
+    .OurEventsHeading {
+        display: block;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0%;
+    }
+    
+    .EventImageContainer {
+        display: block;
+        width: 100vw;
+        height: auto;
+        place-self: end;
+        position: relative;
+    }
+
+    .OurEventsContent{
+        display: block;
+    }
+
+    .EventTextContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: auto;
+        padding-top: 3%;
+        padding-left: 5%;
+        padding-right: 10%;
+        padding-bottom: 3%;
+    }
+
+    .EventTypeContainer {
+        display: flex;
+        height: auto;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 5%;
+    }
+
+    .Button{
+        margin-top: 3%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 3%;
     }
 }
